--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_script:
   - psql -c 'create user dart with createdb;' -U postgres
   - psql -c "alter user dart with password 'dart';" -U postgres
   - psql -c 'grant all on database dart_test to dart;' -U postgres
+  - psql -c 'create user darttrust with createdb;' -U postgres
+  - psql -c 'grant all on database dart_test to darttrust;' -U postgres
   - pub get
 script: pub run test -j 1 -r expanded
 branches:
