--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ before_script:
   - psql -c 'create user darttrust with createdb;' -U postgres
   - psql -c 'grant all on database dart_test to darttrust;' -U postgres
   - pub get
-script: pub run test -j 1 -r expanded
+script: bash ci/script.sh
+after_success: bash ci/after_script.sh
 branches:
   only:
     - master
