--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: postgres
 description: A library to connect and query PostgreSQL databases.
-version: 0.9.4
+version: 0.9.4+1
 author: stable|kernel <jobs@stablekernel.com>
 homepage: https://github.com/stablekernel/postgresql-dart
 documentation:
@@ -13,3 +13,4 @@ dependencies:
 
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
+  coverage: any
