Adds SSL support (#14)
* Updating tests

* Timeout handling

* timeout

* Fix test, update exception string

* dartfmt, changelog, pubspec

* Try diff config

* Update to postgresql 9.5

* Diff config

* trying config

* Testing

* Update script for 9.5

* remove debug statements

* Adding spaces to exception toString

* remove comment

* remove unneeded import

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: postgres
-description: A library to connect and query PostgreSQL databases.
-version: 0.9.4+1
+description: PostgreSQL database driver. Supports statement reuse and binary protocol.
+version: 0.9.5
 author: stable|kernel <jobs@stablekernel.com>
 homepage: https://github.com/stablekernel/postgresql-dart
 documentation:
