--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,15 @@
 name: postgres
 description: PostgreSQL database driver. Supports statement reuse and binary protocol.
-version: 0.9.9
+version: 1.0.0-beta.1
 author: stable|kernel <jobs@stablekernel.com>
 homepage: https://github.com/stablekernel/postgresql-dart
 documentation:
 
 environment:
-  sdk: '>=1.19.0 <2.0.0'
+  sdk: ">=2.0.0-dev <3.0.0"
 
 dependencies:
   crypto: ^2.0.0
-  dart2_constant: ^1.0.0
 
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
