Update CI: run dartfmt, analyzer and test. (#79)
* Update CI: run dartfmt, analyzer and test.

* running dartfmt

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,12 @@ before_script:
   - psql -c 'create user darttrust with createdb;' -U postgres
   - psql -c 'grant all on database dart_test to darttrust;' -U postgres
   - pub get
-script: bash ci/script.sh
+#script: bash ci/script.sh
+dart_task:
+  - test: --run-skipped -r expanded -j 1
+  - dartfmt
+  - dartanalyzer: --fatal-infos --fatal-warnings .
+
 #after_success: bash ci/after_script.sh
 branches:
   only:
