--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,8 @@
 # https://github.com/dart-lang/sdk/tree/master/pkg/analyzer#configuring-the-analyzer
 
 analyzer:
-  strong-mode: true
+#  strong-mode:
+#    implicit-casts: false
 #   excludes:
 #     - path/to/excluded/files/**
 
