--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,19 +3,61 @@
 # The commented part below is just for inspiration. Read the guide here:
 # https://github.com/dart-lang/sdk/tree/master/pkg/analyzer#configuring-the-analyzer
 
+include: package:pedantic/analysis_options.yaml
+
 analyzer:
-#  strong-mode:
-#    implicit-casts: false
-#   excludes:
-#     - path/to/excluded/files/**
+  errors:
+    override_on_non_overriding_method: error
+    unused_element: error
+    unused_import: error
+    unused_local_variable: error
+    dead_code: error
+  strong-mode:
+    implicit-casts: false
 
 linter:
   rules:
     # see catalogue here: http://dart-lang.github.io/linter/lints/
-    - camel_case_types
-    - hash_and_equals
-    - iterable_contains_unrelated_type
-    - list_remove_unrelated_type
-    - unawaited_futures
-    - unrelated_type_equality_checks
-    - valid_regexps
+  - annotate_overrides
+  - avoid_unused_constructor_parameters
+  - await_only_futures
+  - camel_case_types
+  - cancel_subscriptions
+  - directives_ordering
+#  - empty_catches
+  - empty_statements
+  - hash_and_equals
+  - iterable_contains_unrelated_type
+  - list_remove_unrelated_type
+  - no_adjacent_strings_in_list
+  - no_duplicate_case_values
+  - non_constant_identifier_names
+  - only_throw_errors
+  - overridden_fields
+  - prefer_collection_literals
+  - prefer_conditional_assignment
+  - prefer_contains
+  - prefer_final_fields
+  - prefer_final_locals
+  - prefer_initializing_formals
+  - prefer_interpolation_to_compose_strings
+  - prefer_is_empty
+  - prefer_is_not_empty
+  - prefer_single_quotes
+  - prefer_typing_uninitialized_variables
+  - recursive_getters
+  - slash_for_doc_comments
+  - test_types_in_equals
+  - throw_in_finally
+  - type_init_formals
+  - unawaited_futures
+  - unnecessary_brace_in_string_interps
+  - unnecessary_getters_setters
+  - unnecessary_lambdas
+  - unnecessary_new
+  - unnecessary_null_aware_assignments
+  - unnecessary_statements
+  - unnecessary_this
+  - unrelated_type_equality_checks
+  - use_rethrow_when_possible
+  - valid_regexps
