--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,13 @@ homepage: https://github.com/stablekernel/postgresql-dart
 documentation:
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
-  buffer: ^1.0.5
+  buffer: ^1.0.6
   crypto: ^2.0.0
 
 dev_dependencies:
+  pedantic: ^1.0.0
   test: ^1.3.0
   coverage: any
