--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,12 @@ version: 2.2.0
 homepage: https://github.com/isoos/postgresql-dart
 
 environment:
-  sdk: ">=2.8.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   buffer: ^1.0.6
-  crypto: ^2.0.0
+  crypto: ^3.0.0
+  collection: ^1.15.0-nullsafety.4
 
 dev_dependencies:
   pedantic: ^1.0.0
