Finalize null-safe release.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: postgres
 description: PostgreSQL database driver. Supports statement reuse and binary protocol.
-version: 2.3.0-null-safety.2
+version: 2.3.0
 homepage: https://github.com/isoos/postgresql-dart
 
 environment:
