--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,7 +3,7 @@
 # The commented part below is just for inspiration. Read the guide here:
 # https://github.com/dart-lang/sdk/tree/master/pkg/analyzer#configuring-the-analyzer
 
-include: package:pedantic/analysis_options.yaml
+include: package:lints/recommended.yaml
 
 analyzer:
   errors:
@@ -11,6 +11,7 @@ analyzer:
     unused_import: error
     unused_local_variable: error
     dead_code: error
+    constant_identifier_names: ignore
   strong-mode:
     implicit-casts: false
 
