--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: postgres
 description: PostgreSQL database driver. Supports statement reuse and binary protocol.
-version: 2.5.2
+version: 2.6.0
 homepage: https://github.com/isoos/postgresql-dart
 
 environment:
@@ -13,7 +13,7 @@ dependencies:
   sasl_scram: ^0.1.0
 
 dev_dependencies:
-  pedantic: ^1.0.0
+  lints: ^2.0.0
   test: ^1.3.0
   coverage: any
   docker_process: ^1.3.1
