--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,12 @@ dependencies:
   crypto: ^3.0.0
   collection: ^1.15.0
   sasl_scram: ^0.1.0
+  stream_channel: ^2.1.1
+  async: ^2.10.0
+  charcode: ^1.3.1
+  meta: ^1.8.0
+  pool: ^1.5.1
+  stack_trace: ^1.11.0
 
 dev_dependencies:
   lints: ^2.0.0
@@ -18,3 +24,4 @@ dev_dependencies:
   coverage: any
   docker_process: ^1.3.1
   path: ^1.8.0
+
