--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   meta: ^1.8.0
   pool: ^1.5.1
   stack_trace: ^1.11.0
+  enough_convert: '>= 1.6.0 <2.0.0' 
 
 dev_dependencies:
   lints: ^2.0.0
