--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -28,6 +28,7 @@ linter:
   - iterable_contains_unrelated_type
   - list_remove_unrelated_type
   - no_adjacent_strings_in_list
+  - no_default_cases
   - no_duplicate_case_values
   - non_constant_identifier_names
   - only_throw_errors
