--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -30,6 +30,7 @@ linter:
   - no_adjacent_strings_in_list
   - no_duplicate_case_values
   - non_constant_identifier_names
+  - noop_primitive_operations
   - only_throw_errors
   - overridden_fields
   - prefer_collection_literals
