--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -50,6 +50,7 @@ linter:
   - type_init_formals
   - unawaited_futures
   - unnecessary_brace_in_string_interps
+  - unnecessary_breaks
   - unnecessary_getters_setters
   - unnecessary_lambdas
   - unnecessary_new
