chore: add uneccessary_* lints
Adding:
  - unnecessary_null_checks
  - unnecessary_parenthesis
  - unnecessary_raw_strings
Each of these found real cases where fixing with the lint
improved readability (one could argue about the raw strings).

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -57,6 +57,9 @@ linter:
   - unnecessary_lambdas
   - unnecessary_new
   - unnecessary_null_aware_assignments
+  - unnecessary_null_checks
+  - unnecessary_parenthesis
+  - unnecessary_raw_strings
   - unnecessary_statements
   - unnecessary_this
   - unrelated_type_equality_checks
