chore: add use_raw_strings and use_super_parameters
The super parameters change is an obvious win, the raw strings
change is debatable, but I think it still makes at least the
short strings more readable.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -57,5 +57,7 @@ linter:
   - unnecessary_statements
   - unnecessary_this
   - unrelated_type_equality_checks
+  - use_raw_strings
   - use_rethrow_when_possible
+  - use_super_parameters
   - valid_regexps
