--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -28,6 +28,7 @@ linter:
   - hash_and_equals
   - collection_methods_unrelated_type
   - no_adjacent_strings_in_list
+  - no_default_cases
   - no_duplicate_case_values
   - non_constant_identifier_names
   - noop_primitive_operations
