Enable concurrent test execution.

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -41,14 +41,9 @@ jobs:
       - name: pull latest postgres image
         run: docker pull postgres:latest
 
-      # Run all tests with a concurency of "1" to allow each test to run independently. 
-      #   This is mainly to prevent `tearDownAll` in `usePostgresDocker` from stoping
-      #   the container while another test is using the container. In other words, each
-      #   test file will call `usePostgresDocker` for container setup and teardown and  
-      #   run its test in between. Using concurrency of "1" will ensure this behavior.
-      # Save coverage information in the "coverage" folder.
+      # Saves coverage information in the "coverage" folder.
       - name: Run tests
-        run: dart test -j 1 --coverage=coverage
+        run: dart test --coverage=coverage
 
       # https://www.bradcypert.com/how-to-upload-coverage-to-codecov-for-dart/
       - name: Install coverage tools
