--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: postgres
-description: PostgreSQL database driver. Supports statement reuse and binary protocol.
-version: 3.0.0-alpha.2
+description: PostgreSQL database driver. Supports statement reuse and binary protocol and connection pooling.
+version: 3.0.0-beta.1
 homepage: https://github.com/isoos/postgresql-dart
 topics:
   - sql
