--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: postgres
 description: PostgreSQL database driver. Supports statement reuse and binary protocol and connection pooling.
-version: 3.4.8
+version: 3.4.9
 homepage: https://github.com/isoos/postgresql-dart
 topics:
   - sql
@@ -16,6 +16,7 @@ dependencies:
   crypto: ^3.0.0
   collection: ^1.15.0
   sasl_scram: ^0.1.0
+  stack_trace: ^1.12.1
   stream_channel: ^2.1.1
   async: ^2.10.0
   charcode: ^1.3.1
