--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,21 +12,21 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
-  buffer: ^1.2.2
-  crypto: ^3.0.0
-  collection: ^1.15.0
-  sasl_scram: ^0.1.0
+  buffer: ^1.2.3
+  crypto: ^3.0.6
+  collection: ^1.19.1
+  sasl_scram: ^0.1.1
   stack_trace: ^1.12.1
-  stream_channel: ^2.1.1
-  async: ^2.10.0
-  charcode: ^1.3.1
-  meta: ^1.8.0
+  stream_channel: ^2.1.4
+  async: ^2.12.0
+  charcode: ^1.4.0
+  meta: ^1.16.0
   pool: ^1.5.1
 
 dev_dependencies:
-  lints: ^5.0.0
-  test: ^1.3.0
-  coverage: any
-  logging: ^1.2.0
+  lints: ^5.1.1
+  test: ^1.25.14
+  coverage: ^1.11.1
+  logging: ^1.3.0
   docker_process: ^1.3.2
-  path: ^1.8.0
+  path: ^1.9.1
