--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: postgres
-description: PostgreSQL database driver. Supports statement reuse and binary protocol and connection pooling.
-version: 3.5.3
+description: PostgreSQL database driver. Supports binary protocol, connection pooling and statement reuse.
+version: 3.5.4
 homepage: https://github.com/isoos/postgresql-dart
 topics:
   - sql
